--- a/source-data/contracts/follow-a-dubious-treasure-map.json
+++ b/source-data/contracts/follow-a-dubious-treasure-map.json
@@ -9,7 +9,8 @@
     "duration": 3500,
     "successChance": 0.05,
     "rewardFactor": 0.2,
-    "rewards": [{
+    "rewards": [
+        {
             "chance": 1,
             "reward": {
                 "type": "coins",
@@ -41,7 +42,8 @@
         }
     ],
     "startTaskId": "start",
-    "tasks": [{
+    "tasks": [
+        {
             "id": "start",
             "name": "Gather supplies",
             "duration": "40",
@@ -55,8 +57,8 @@
             "difficulty": "0.5",
             "taskAfterSuccess": "find",
             "taskAfterFail": "home",
-            "injuryOnFail": true,
-            "mustSucceedForReward": true
+            "injuryType": true,
+            "required": true
         },
         {
             "id": "find",
@@ -67,7 +69,7 @@
             "taskAfterSuccess": "dig",
             "taskAfterFail": "home",
             "retry": "3",
-            "mustSucceedForReward": true
+            "required": true
         },
         {
             "id": "dig",
@@ -77,8 +79,8 @@
             "difficulty": "0.5",
             "taskAfterSuccess": "home",
             "taskAfterFail": "home",
-            "injuryOnFail": true,
-            "mustSucceedForReward": true
+            "injuryType": true,
+            "required": true
         },
         {
             "id": "home",
@@ -86,7 +88,7 @@
             "duration": "1000",
             "skillTest": "Toughness",
             "difficulty": "0.2",
-            "injuryOnFail": true
+            "injuryType": true
         }
     ]
 }
