Update to peasent icon

--- a/source-data/adventurers/peasent.json
+++ b/source-data/adventurers/peasent.json
@@ -1,7 +1,7 @@
 {
     "name": "Peasant",
     "plural": "Peasants",
-    "symbol": "⚒",
+    "symbol": "👤",
     "becomes": [
         "Citizen"
     ],
