--- a/source-data/contracts/follow-a-suspect-treasure-map.json
+++ b/source-data/contracts/follow-a-suspect-treasure-map.json
@@ -9,8 +9,7 @@
     "duration": 3500,
     "successChance": 0.15,
     "rewardFactor": 0.2,
-    "rewards": [
-        {
+    "rewards": [{
             "chance": 1,
             "reward": {
                 "type": "coins",
@@ -42,11 +41,11 @@
         }
     ],
     "requirements": {
-        "renown": 0
+        "minAssigned": 1,
+        "maxAssigned": 15
     },
     "startTaskId": "start",
-    "tasks": [
-        {
+    "tasks": [{
             "id": "start",
             "name": "Gather supplies",
             "duration": "40",
