Added baseEfficiency to all adventurers.

--- a/source-data/adventurers/peasent.json
+++ b/source-data/adventurers/peasent.json
@@ -5,12 +5,10 @@
     "becomes": [
         "Citizen"
     ],
-    "cpt": 0,
     "baseCost": 10,
     "baseCut": 2.0,
     "baseExperience": 3,
-    "costMultiplier": 1,
-    "costExponent": 1.05,
+    "baseEfficiency": 0.8,
     "skills": [{
             "name": "Toughness",
             "amount": 1
